cap nhat hinh anh email-alert

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -34,7 +34,7 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 <a name="21"></a>
 ### 2.1. Topology lab
 
-<img src="">
+<img src="http://i.imgur.com/undefined.png">
 
 <a name="22"></a>
 ### 2.2. IP Planning
@@ -107,7 +107,7 @@ echo "This is a test." | mail -s "test message" maiquoctri2102@gmail.com
 - Bước 2: Kiểm tra trên hòm thư của Gmail
 Nếu nhận được email như sau thì các bước cấu hình dịch vụ mail đã thành công
 
-<img src="">
+<img src="http://i.imgur.com/MoqAlng.png">
 
 <a name="4"></a>
 ## 4. Gửi cảnh báo khi có sự cố
