cap nhat hinh anh

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -34,7 +34,7 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 <a name="21"></a>
 ### 2.1. Topology lab
 
-<img src="http://i.imgur.com/undefined.png">
+<img src="http://i.imgur.com/gl7j9lP.png">
 
 <a name="22"></a>
 ### 2.2. IP Planning
