cap nhat them hinh anh lab

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -175,12 +175,12 @@ service ssh stop
 - Bước 2: Kiểm tra dịch vụ trên dashboard Nagios
 Sau khi thực hiện ngừng dịch vụ ssh trên máy client, quay lại dashboard của Nagios để kiểm tra nếu trên dashboard thông báo như sau nghĩa là dịch vụ đã bị dừng
 
-<img src="">
+<img src="http://i.imgur.com/PiZI9vC.png">
 
 - Bước 3: Kiểm tra hòm thư Gmail 
 Kiểm tra hòm thư Gmail để xem Nagios có tự động gửi mail cảnh báo đến không. Ở đây tôi đã nhận được mail cảnh báo đến
 
-<img src="">
+<img src="http://i.imgur.com/lnsAPcK.png">
 
 - Bước 4: Khởi động lại dịch vụ trên Client
 Sau khi nhận được email cảnh báo, tôi sẽ khởi động lại dịch vụ để thử xem Nagios có gửi email bản tin Recovery
@@ -193,13 +193,13 @@ service ssh start
 
 Sau khi thực hiện khởi động dịch vụ, kiểm tra trên dashboard
 
-<img src="">
+<img src="http://i.imgur.com/J49YOOH.png">
 
 - Bước 6: Kiểm tra email Recovey
 
 Sau khi dịch vụ đã hoạt động trở lại, Nagios sẽ thông báo 1 bản tin cho người quản trị trạng thái của dịch vụ đó. Kiểm tra hòm thư để xác nhận
 
-<img src="">
+<img src="http://i.imgur.com/lulFsEU.png">
 
 Như vậy là Nagios đã có thể gửi email cảnh báo khi dịch vụ bị down. Để kiểm chứng thêm tôi sẽ lab với dịch vụ khác là web
 
@@ -256,7 +256,7 @@ service apache2 start
 
 
 
-<a name="5">
+<a name="5"></a>
 ## 5. Khác
 
 
