cap nhat gui mail domain

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -13,6 +13,7 @@
 	- [4.2. Gửi cảnh báo khi dịch vụ http down](#42)
 	- [4.3. Gửi cảnh báo khi máy chủ off hoặc restart](#43)
 - [5. Khác](#5)
+	- [5.1. Gửi mail cảnh báo qua mail domain](#51)
 - [6. Tài liệu tham khảo](#6)
 	
 
@@ -27,7 +28,7 @@ Trong thực tế, người quản trị viên không phải lúc nào cũng có
 <a name="2"></a>
 ## 2. Topology lab & IP Planning
 
-<b>Lưu ý:</b> Để thực hành bài lab gửi email cảnh báo này, bạn bắt buộc phải thực hiện xong cài đặt Nagios Core trên Nagios Server và các dịch vụ ssh, http trên Client theo mô hình ở bài lab này trên CentOS7 <link>
+<b>Lưu ý:</b> Để thực hành bài lab gửi email cảnh báo này, bạn bắt buộc phải thực hiện xong cài đặt Nagios Core trên Nagios Server và các dịch vụ ssh, http trên Client theo mô hình ở bài lab này trên CentOS7 tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
 
 Đối với bài lab này cần ít nhất là 02 máy chủ: Nagios Server và Web
 
@@ -237,27 +238,108 @@ service apache2 start
 <img src="http://i.imgur.com/1LQJtgD.png">
 
 
+<a name="43"></a>
+### 4.3. Gửi cảnh báo khi máy chủ off hoặc restart
+
+Như 2 bài lab ở trên, tôi đã thử nghiệm khi các dịch vụ bị down Nagios sẽ gửi email cảnh báo tới người quản trị. Bây giờ tôi sẽ thực hiện lab tính năng gửi cảnh báo khi máy chủ bị down
+
+- Bước 1: Tắt máy chủ chủ đi
+
+```sh
+init 0
+```
+
+- Bước 2: Kiểm tra trên dashboard
+
+<img src="http://i.imgur.com/iFFQG94.png">
+
+- Bước 3: Kiểm tra hòm thư Gmail
+
+<img src="http://i.imgur.com/DVGNQbU.png">
+
+- Bước 4: Khởi động lại máy
 
 
+- Bước 5: Kiểm tra trên dashboard
 
+<img src="http://i.imgur.com/YPEyN4i.png">
 
+- Bước 6: Kiểm tra hòm thư email Recovery
 
-
-
-
-
-
-
-
-
-
-
-
-
+<img src="http://i.imgur.com/G3aEZdA.png">
 
 
 <a name="5"></a>
 ## 5. Khác
+
+<a name="51"></a>
+### 5.1. Gửi mail cảnh báo qua mail domain:
+Với bài hướng dẫn ở trên, tôi đã hướng dẫn setup email cảnh báo gửi qua Gmail. Tuy nhiên Nagios còn có thể hỗ trợ gửi mail thông qua email domain, sau đây tôi sẽ hướng dẫn cấu hình gửi cảnh báo qua email domain
+
+Điều kiện để cấu hình email domain cũng tương tự Gmail, ta phải cài đặt thành công Nagios Core trên CentOS7
+
+Tham khảo cài đặt tại [đây](https://github.com/meditechopen/meditech-ghichep-nagios/blob/master/docs/thuchanh-nagios/1.Setup-CentOS-7.md)
+
+<b>Lưu ý</b>: Ở đây tôi sẽ sử dụng mô hình lab tương tự như với Gmail. Chỉ được chọn 1 trong 2 cách để gửi mail (hoặc là qua Gmail, hoặc là qua Mail domain) 
+
+### Với những bước cài đặt sau, thực hiện trên Nagios Server
+
+- Bước 1: Cài đặt gói mail postfix
+
+```sh
+yum -y install postfix cyrus-sasl-plain mailx
+```
+
+- Bước 2: Chỉnh sửa file cấu hình `/etc/postfix/main.cf`
+
+```sh
+relayhost =
+sender_dependent_relayhost_maps = hash:/etc/postfix/relayhost_maps
+smtp_sasl_auth_enable = yes
+smtp_sasl_password_maps = hash:/etc/postfix/sasl_passwd
+smtp_sender_dependent_authentication = yes
+smtp_sasl_security_options = noanonymous
+#smtp_sasl_mechanism_filter = AUTH LOGIN
+sender_canonical_maps = hash:/etc/postfix/sender_canonical
+smtp_sasl_tls_security_options =
+```
+
+- Bước 3: Khai báo thông tin domain trong file `/etc/postfix/relayhost_maps`
+
+```sh
+email  [domain]
+```
+
+Thay email domain bằng địa chỉ email và tên domain của bạn
+
+- Bước 4: Tạo file `/etc/postfix/sasl_passwd` và khai báo thông tin email xác thực
+
+```sh
+vi /etc/postfix/sasl_passwd
+
+
+domain  username:password
+```
+Khai báo thông tin username và password
+
+- Bước 5: Cấu hình, phân quyền và khởi động lại dịch vụ
+
+```sh
+postmap /etc/postfix/sasl_passwd
+chown root:postfix /etc/postfix/sasl_passwd*
+chmod 640 /etc/postfix/sasl_passwd*
+systemctl reload postfix
+```
+
+Bước 6: Gửi mail test thử với email domain
+
+```sh
+echo "This is a test." | mail -s "test message" tri.maiquoc@meditech.vn
+```
+
+- Bước 7: Kiểm tra thư
+
+<img src="http://i.imgur.com/T9QAh3B.png">
 
 
 <a name="6"></a>
