--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -24,12 +24,8 @@
 <img src="../../images/topo.png" />
 
 #### IP Planning
-Hostname |   OS   | Service | Interface | IP Address | Netmask |  Gateway | DNS | CPU (Core) | RAM (GB) | DISK (GB) |
---|--|--|--|--|--|--|--|--|--|--|
-nagios | CentOS 7 | Nagios | eth0 | 192.168.100.196 | 255.255.255.0 | 192.168.100.1 | 8.8.8.8 | 1 | 1 | 20 |
-db-mysql01 | CentOS 7 | MariaDB | eth0 | 192.168.100.197 | 255.255.255.0 | 192.168.100.1 | 8.8.8.8 | 1 | 1 | 20 |
-rabbitmq01 | CentOS 7 | RabbitMQ | eth0 | 192.168.100.198 | 255.255.255.0 | 192.168.100.1 | 8.8.8.8 | 1 | 1 | 20 |
-web01 | CentOS 7 | httpd | eth0 | 192.168.100.199 | 255.255.255.0 | 192.168.100.1 | 8.8.8.8 | 1 | 1 | 20 |
+
+<img src="../../images/IP-Planning.png" />
 
 Link docs: https://goo.gl/yOim1o
 
@@ -39,8 +35,11 @@ Link docs: https://goo.gl/yOim1o
 yum install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinetd unzip httpd php php-fpm curl wget -y
 ```
 
-<a name="1.2"></a>
-#### 1.2 Tạo user cho Nagios
+<a name="2"></a>
+### 2. Cài đặt Nagios
+
+<a name="2.1"></a>
+#### 2.1 Tạo user cho Nagios
 
 Tạo user `nagios` trên máy chủ cài đặt Nagios Server
 
@@ -59,8 +58,8 @@ usermod -a -G nagcmd nagios
 usermod -a -G nagcmd apache
 ```
 
-<a name="2"></a>
-### 2. Cài đặt Nagios
+<a name="2.2"></a>
+#### 2.2 Cài đặt Nagios Core và Plugin
 
 Chúng ta tải Nagios Core và Plugin của nó về server. Tại thời điểm viết bài, phiên bản mới nhất là Nagios Core 4.3.1. Để cập nhật mới nhất, vui lòng bấm vào [đây](https://www.nagios.org/download/).
 
@@ -71,10 +70,6 @@ wget http://prdownloads.sourceforge.net/sourceforge/nagios/nagios-4.3.1.tar.gz
 wget https://nagios-plugins.org/download/nagios-plugins-2.2.0.tar.gz
 curl -L -O http://downloads.sourceforge.net/project/nagios/nrpe-2.x/nrpe-2.15/nrpe-2.15.tar.gz
 ```
-
-
-<a name="2.1"></a>
-#### 2.1 Cài đặt Nagios Core và Plugin
 
 Sau khi tải xong, chúng ta cùng giải nén và bắt đầu phần biên dịch Nagios Core và Plugin.
 
@@ -116,9 +111,12 @@ make
 make install
 ```
 
-#### 2.2 Cài đặt NRPE
+<a name="2.3"></a>
+#### 2.3 Cài đặt NRPE trên Nagios Server
 
 `NRPE` - (*Nagios Remote Plugin Executor*) là một công cụ đi kèm để theo dõi tài nguyên hệ thống, nó còn được biết như một Agent để theo dõi các host từ xa (Remote hosts).
+
+**Mục đích của việc cài đặt này là để biên dịch ra plugin `check_nrpe`.**
 
 ```
 cd ~/nagios
@@ -171,7 +169,7 @@ http://địa-chỉ-ip/nagios
 <a name="2.4"></a>
 #### 2.4 Cấu hình giám sát 1 host Linux
 
-Chúng ta đặt tất cả các file cấu hình host giám sát vào một thư mục, sửa file cấu hình chính của `nagios`:
+Trên Nagios server, chúng ta tạo một thư mục đặt tất cả các file cấu hình host giám sát, sửa file cấu hình chính của `nagios`:
 
 ```sh
 vi /usr/local/nagios/etc/nagios.cfg
@@ -189,16 +187,16 @@ Tạo thư mục và file cấu hình host cần giám sát:
 
 ```
 mkdir /usr/local/nagios/etc/servers
-vi /usr/local/nagios/etc/servers/Web-1.cfg
+vi /usr/local/nagios/etc/servers/web01.cfg
 ```
 
-Ở đây, tôi sẽ giám sát 2 dịch vụ SSH và HTTP
+Ở đây, chúng ta sẽ giám sát 2 dịch vụ SSH và HTTP
 
 ```
 define host {
 use                             linux-server
 host_name                       web01		
-alias                           web01	
+alias                           web01
 address                         192.168.100.199
 max_check_attempts              5
 check_period                    24x7
@@ -215,7 +213,7 @@ define service {
 }
 define service {
     use                 generic-service     ; Inherit default values from a template
-    host_name           web-01
+    host_name           web01
     service_description SSH
     check_command       check_ssh
 }
