--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -4,7 +4,7 @@
 
 
 - [ 1. Chuẩn bị ](#1)
-    -   [1.1 Chuẩn bị môi trường cài đặt](#1.1)
+    - [1.1 Chuẩn bị môi trường cài đặt](#1.1)
 - [ 2. Cài đặt Nagios ](#2)
     - [2.1 Tạo user cho Nagios](#2.1)
     - [2.2 Cài đặt Nagios Core và Plugin](#2.2)
@@ -14,7 +14,6 @@
     - [2.6 Giám sát dịch vụ MySQL](#2.6)
     - [2.7 Giám sát dịch vụ RabbitMQ](#2.7)
 - [3. Tham khảo](#3)
-
 
 <a name="1.1"></a>
 #### 1.1 Chuẩn bị môi trường cài đặt
@@ -73,11 +72,17 @@ curl -L -O http://downloads.sourceforge.net/project/nagios/nrpe-2.x/nrpe-2.15/nr
 
 Sau khi tải xong, chúng ta cùng giải nén và bắt đầu phần biên dịch Nagios Core và Plugin.
 
-```
+- **Bước 1**: Giải nén source Nagios
+
+```sh
 cd ~/nagios
 tar xf nagios-4.3.1.tar.gz
 cd ~/nagios/nagios-4.3.1
+```
 
+- **Bước 2**: Biên dịch Nagios
+
+```
 ./configure --with-command-group=nagcmd 
 make all
 make install
@@ -87,24 +92,28 @@ make install-config
 make install-webconf
 ```
 
-Cho phép nagios khởi động cùng với hệ thống:
+- **Bước 3**: Cho phép nagios khởi động cùng với hệ thống:
 
 ```sh
 chkconfig nagios on
 ```
 
-Cài đặt password cho `nagiosadmin`, khi đăng nhập Web:
+- **Bước 4**: Cài đặt password cho `nagiosadmin`, khi đăng nhập Web:
 
 ```sh
 htpasswd -c /usr/local/nagios/etc/htpasswd.users nagiosadmin
 ```
 
-Biên dịch các plugin
+- **Bước 5**: Giải nén source Plugin
 
 ```sh
 cd ~/nagios
 tar xzf nagios-plugins-2.2.0.tar.gz
+```
 
+- **Bước 6**: Biên dịch các Plugin từ source code
+
+```
 cd ~/nagios/nagios-plugins-2.2.0
 ./configure --with-nagios-user=nagios --with-nagios-group=nagios --with-openssl
 make
@@ -118,11 +127,17 @@ make install
 
 **Mục đích của việc cài đặt này là để biên dịch ra plugin `check_nrpe`.**
 
+- **Bước 1**: Giải nén source NRPE
+
 ```
 cd ~/nagios
 tar xf nrpe-*.tar.gz
 cd ~/nagios/nrpe-*
+```
 
+- **Bước 2**: Biên dịch NRPE từ source
+
+```
 ./configure --enable-command-args --with-nagios-user=nagios \
 --with-nagios-group=nagios --with-ssl=/usr/bin/openssl \
 --with-ssl-lib=/usr/lib/x86_64-linux-gnu
@@ -132,20 +147,6 @@ sudo make install
 sudo make install-xinetd
 sudo make install-daemon-config
 ```
-
-Cấu hình NRPE bằng cách thêm địa chỉ IP của Nagios Server vào trường `only_from`:
-
-```
-vi /etc/xinetd.d/nrpe
-```
-
-```
-...
-only_from = 127.0.0.1 192.168.100.196
-...
-```
-
-**Chú ý**: `192.168.100.196` là địa chỉ Nagios Server của bạn
 
 <a name="2.4"></a>
 #### 2.4 Khởi động Nagios Server
@@ -171,11 +172,13 @@ http://địa-chỉ-ip/nagios
 
 Trên Nagios server, chúng ta tạo một thư mục đặt tất cả các file cấu hình host giám sát, sửa file cấu hình chính của `nagios`:
 
+- **Bước 1**: Sửa file cấu hình của Nagios
+
 ```sh
 vi /usr/local/nagios/etc/nagios.cfg
 ```
 
-Tìm và bỏ "#" ở dòng:
+- **Bước 2**: Tìm và bỏ "#" ở dòng:
 
 ```
 ...
@@ -183,7 +186,7 @@ cfg_dir=/usr/local/nagios/etc/servers
 ...
 ```
 
-Tạo thư mục và file cấu hình host cần giám sát:
+- **Bước 3**: Tạo thư mục và file cấu hình host cần giám sát:
 
 ```
 mkdir /usr/local/nagios/etc/servers
@@ -212,20 +215,20 @@ define service {
     retry_check_interval            2
 }
 define service {
-    use                 generic-service     ; Inherit default values from a template
+    use                 generic-service
     host_name           web01
     service_description SSH
     check_command       check_ssh
 }
 ```
 
-Sau khi chỉnh sửa xong, chúng ta lưu lại file và khởi động lại nagios.
+- **Bước 4**: Sau khi chỉnh sửa xong, chúng ta lưu lại file và khởi động lại nagios.
 
 ```
 systemctl restart nagios
 ```
 
-Vào giao diện Web để kiểm tra
+- **Bước 5**: Vào giao diện Web để kiểm tra
 
 <img src="../../images/nagios-2.png" />
 
