Update các bước

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -70,7 +70,7 @@ wget https://nagios-plugins.org/download/nagios-plugins-2.2.0.tar.gz
 curl -L -O http://downloads.sourceforge.net/project/nagios/nrpe-2.x/nrpe-2.15/nrpe-2.15.tar.gz
 ```
 
-Sau khi tải xong, chúng ta cùng giải nén và bắt đầu phần biên dịch Nagios Core và Plugin.
+Sau khi tải xong, chúng ta cùng giải nén và bắt đầu phần biên dịch Nagios Core và Plugin trên máy chủ mà ta muốn cài Nagios.
 
 - **Bước 1**: Giải nén source Nagios
 
@@ -151,12 +151,13 @@ sudo make install-daemon-config
 <a name="2.4"></a>
 #### 2.4 Khởi động Nagios Server
 
-Khởi động lại Apache và chạy `nagios`:
+Khởi động lại Apache và chạy `nagios`, cho phép khởi động cùng hệ thống:
 
 ```sh
 systemctl enable httpd
 systemctl restart httpd
 service nagios restart
+chkconfig nagios on
 ```
 
 Để kiểm tra, hãy truy cập vào giao diện Web và đăng nhập bằng `nagiosadmin` và Password vừa tạo ở địa chỉ:
