Update câu lệnh NRPE

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -142,11 +142,28 @@ cd ~/nagios/nrpe-*
 --with-ssl-lib=/usr/lib/x86_64-linux-gnu
 
 make all
-sudo make install
-sudo make install-xinetd
-sudo make install-daemon-config
+make install
 ```
 
+- **Bước 3**: Thêm câu lệnh `check_nrpe`
+
+    - Mở file `/usr/local/nagios/etc/objects/command.cfg`:
+    
+    ```
+    vi /usr/local/nagios/etc/objects/command.cfg
+    ```
+    - Thêm câu lệnh sau:
+    
+    ```
+    ...
+    define command{
+        command_name check_nrpe
+        command_line $USER1$/check_nrpe -H $HOSTADDRESS$ -c $ARG1$
+    }
+    ```
+    
+    - Thoát và lưu lại file.
+    
 <a name="2.4"></a>
 #### 2.4 Khởi động Nagios Server
 
