Update phần NRPE (Chưa hoàn chỉnh)

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -28,7 +28,10 @@
 Link docs: https://goo.gl/yOim1o
 
 <a name="2"></a>
-### 2. Cài đặt Nagios Server
+### 2. Cài đặt Nagios trên Nagios Server
+
+<a name="2.1"></a>
+#### 2.1 Cài đặt các gói chuẩn bị cần thiết
 
 Để có thể cài đặt và sử dụng được Nagios Core, chúng ta phải cài đặt một số thư viện và các gói thư viện dịch vụ đi kèm.
 
@@ -38,8 +41,8 @@ Link docs: https://goo.gl/yOim1o
 yum install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinetd unzip httpd php php-fpm curl wget -y
 ```
 
-<a name="2.1"></a>
-#### 2.1 Tạo user cho Nagios
+<a name="2.2"></a>
+#### 2.2 Tạo user cho Nagios
 
 Tạo user `nagios` trên máy chủ cài đặt Nagios Server
 
@@ -58,8 +61,8 @@ usermod -a -G nagcmd nagios
 usermod -a -G nagcmd apache
 ```
 
-<a name="2.2"></a>
-#### 2.2 Cài đặt Nagios Core và Plugin
+<a name="2.3"></a>
+#### 2.3 Cài đặt Nagios Core và Plugin
 
 Chúng ta tải Nagios Core về server. Tại thời điểm viết bài, phiên bản mới nhất là Nagios Core 4.3.1. Để cập nhật mới nhất, vui lòng bấm vào [đây](https://www.nagios.org/download/).
 
@@ -117,8 +120,8 @@ make
 make install
 ```
 
-<a name="2.3"></a>
-#### 2.3 Cài đặt NRPE trên Nagios Server
+<a name="2.4"></a>
+#### 2.4 Cài đặt NRPE trên Nagios Server
 
 `NRPE` - (*Nagios Remote Plugin Executor*) là một công cụ đi kèm để theo dõi tài nguyên hệ thống, nó còn được biết như một Agent để theo dõi các host từ xa (Remote hosts).
 
@@ -167,8 +170,8 @@ make install
     
     - Thoát và lưu lại file.
     
-<a name="2.4"></a>
-#### 2.4 Khởi động Nagios Server
+<a name="2.5"></a>
+#### 2.5 Khởi động Nagios Server
 
 Khởi động lại Apache và chạy `nagios`, cho phép khởi động cùng hệ thống:
 
@@ -187,82 +190,93 @@ http://địa-chỉ-ip/nagios
 
 <img src="../../images/nagios-1.png" />
 
-<a name="2.5"></a>
-#### 2.5 Cấu hình giám sát 1 host Linux
+<a name="3"></a>
+### 3. Giám sát host Linux
 
-Trên Nagios server, chúng ta tạo một thư mục đặt tất cả các file cấu hình host giám sát, sửa file cấu hình chính của `nagios`:
+#### 3.1 Giám sát thông qua NRPE
 
-- **Bước 1**: Sửa file cấu hình của Nagios
+##### 3.1.1 Cài đặt trên host cần giám sát
 
-```sh
-vi /usr/local/nagios/etc/nagios.cfg
-```
+Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sau:
 
-- **Bước 2**: Tìm và bỏ "#" ở dòng:
+- **Bước 1**: Cập nhật repo cho host
 
-```
-...
-cfg_dir=/usr/local/nagios/etc/servers
-...
-```
+    - Đối với client sử dụng CentOS, cài đặt repo `epel-release`:
+    
+    ```
+    yum install epel-release
+    ```
+    
+    - Đối với client sử dụng Ubuntu:
+    
+    ```
+    apt-get update
+    ```
+  
+- **Bước 2**: Cài đặt NRPE và các Plugin trên host cần giám sát
 
-- **Bước 3**: Tạo thư mục và file cấu hình host cần giám sát:
+    - Đối với client sử dụng CentOS, cài đặt repo `epel-release`:
+    
+    ```
+    yum install nrpe nagios-plugins-all
+    ```
+    
+    - Đối với client sử dụng Ubuntu:
+    
+    ```
+    apt-get install nagios-plugins nagios-nrpe-server
+    ```
+    
+- **Bước 3**: Cấu hình NRPE trên host cần giám sát
 
-```
-mkdir /usr/local/nagios/etc/servers
-vi /usr/local/nagios/etc/servers/web01.cfg
-```
+*Bước này có thể làm trên cả 2 distro CentOS và Ubuntu.*
 
-Ở đây, chúng ta sẽ giám sát 2 dịch vụ SSH và HTTP
-
-```
-define host {
-use                             linux-server
-host_name                       web01		
-alias                           web01
-address                         192.168.100.199
-max_check_attempts              5
-check_period                    24x7
-notification_interval           30
-notification_period             24x7
-}
-define service {
-    use                 generic-service
-    host_name           web01
-    service_description HTTP
-    check_command       check_http
-    normal_check_interval           5 
-    retry_check_interval            2
-}
-define service {
-    use                 generic-service
-    host_name           web01
-    service_description SSH
-    check_command       check_ssh
-}
-```
-
-- **Bước 4**: Sau khi chỉnh sửa xong, chúng ta lưu lại file và khởi động lại nagios.
+Sửa file cấu hình NRPE
 
 ```
-systemctl restart nagios
+vi /etc/nagios/nrpe.cfg
 ```
 
-- **Bước 5**: Vào giao diện Web để kiểm tra
+Tìm trường `allowed_hosts` và thêm địa chỉ IP Nagios server của bạn vào. Mỗi IP cách nhau bởi dấu phẩy (,):
 
-<img src="../../images/nagios-2.png" />
+```
+allowed_hosts=127.0.0.1,192.168.100.196
+```
 
-<a name="2.6"></a>
-#### 2.6 Giám sát MySQL
+Lưu lại file và thoát.
+
+- **Bước 4**: Khởi động lại dịch vụ
+    
+    - Với host sử dụng CentOS
+    
+    ```
+    systemctl start nrpe.service
+    systemctl enable nrpe.service
+    ```
+    
+    - Với host sử dụng Ubuntu
+    
+    ```
+    service nagios-nrpe-server restart
+    ```
+
+Sau khi cài đặt và cấu hình NRPE trên host mà chúng ta muốn giám sát, chúng ta cần phải thêm host đó vào cấu hình Nagios Server trước khi bắt đầu giám sát nó.
+
+##### 3.1.3 Thêm thông tin trên Nagios Server
+
+**Còn tiếp...*
+
+<a name="3.2"></a>
+#### 3.2 Giám sát MySQL
 
 Vui lòng bấm vào [đây](4.Monitor-MySQL.md).
 
-<a name="2.7"></a>
-#### 2.7 Giám sát RabbitMQ
+<a name="3.3"></a>
+#### 3.3 Giám sát RabbitMQ
 
 Vui lòng bấm vào [đây](5.Monitor-RabbitMQ.md).
 
-<a name="3"></a>
-### 3. Tham khảo
+<a name="4"></a>
+### 4. Tham khảo
 
 - https://assets.nagios.com/downloads/nagioscore/docs/nagioscore/4/en/quickstart-fedora.html
