--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -251,13 +251,13 @@ allowed_hosts=127.0.0.1,192.168.100.196
     
 Trên 2 distro CentOS và Ubuntu, thư mục chứa các plugin trên client là khác nhau:
 
-        - Với CentOS, thư mục chứa Plugin ở `/usr/lib64/nagios/plugins/`
+    - Với CentOS, thư mục chứa Plugin ở `/usr/lib64/nagios/plugins/`
 
-<img src="../../plugin-c-client.png" />
+<img src="../../images/plugin-c-client.png" />
 
-        - Với Ubuntu, thư mục chứa Plugin ở `/usr/lib/nagios/plugins/` 
+    - Với Ubuntu, thư mục chứa Plugin ở `/usr/lib/nagios/plugins/` 
 
-<img src="../../plugin-u-client.png" />
+<img src="../../images/plugin-u-client.png" />
     
 Vì vậy, để thêm các lệnh check dịch vụ ở 2 distro cũng phải khai báo đúng đường dẫn trỏ tới thư mục chứa các plugin.
 
