--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -237,7 +237,7 @@ Sửa file cấu hình NRPE
 vi /etc/nagios/nrpe.cfg
 ```
     
-    - Cho phép Server Nagios có quyền truy cập và sử dụng NRPE
+**Cho phép Server Nagios có quyền truy cập và sử dụng NRPE**
 
 Tìm trường `allowed_hosts` và thêm địa chỉ IP Nagios server của bạn vào. Mỗi IP cách nhau bởi dấu phẩy (,):
 
@@ -247,7 +247,7 @@ allowed_hosts=127.0.0.1,192.168.100.196
 
 Đừng thoát khỏi file, làm tiếp theo bước dưới để khai báo câu lệnh cho NRPE.
 
-    - Thêm câu lệnh để check các dịch vụ
+**Thêm câu lệnh để check các dịch vụ**
     
 Trên 2 distro CentOS và Ubuntu, thư mục chứa các plugin trên client là khác nhau:
 
