Update duyệt bài

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -9,10 +9,16 @@
     - [2.2 Cài đặt Nagios Core và Plugin](#2.2)
     - [2.3 Cài đặt NRPE trên Nagios Server](#2.3)
     - [2.4 Khởi động Nagios Server](#2.4)
-    - [2.5 Cấu hình giám sát host Linux trên Nagios Server](#2.5)
-    - [2.6 Giám sát dịch vụ MySQL/MariaDB](#2.6)
-    - [2.7 Giám sát dịch vụ RabbitMQ](#2.7)
+- [3. Giám sát host/dịch vụ](#3)
+    - [3.1 Giám sát host Linux thông qua NRPE](#3.1)
+        - [3.1.1 Cài đặt trên host cần giám sát](#3.1.1)
+        - [3.1.2 Thêm thông tin host trên Nagios Server](#3.1.2)
+    - [3.2 Giám sát dịch vụ MySQL/MariaDB](#3.2)
+    - [3.3 Giám sát dịch vụ RabbitMQ](#3.3)
 - [3. Tham khảo](#3)
+
+<a name="1"></a>
+### 1. Chuẩn bị
 
 <a name="1.1"></a>
 #### 1.1 Chuẩn bị môi trường cài đặt
@@ -191,10 +197,12 @@ http://địa-chỉ-ip/nagios
 <img src="../../images/nagios-1.png" />
 
 <a name="3"></a>
-### 3. Giám sát host Linux
+### 3. Giám sát host/dịch vụ trên Linux
 
+<a name="3.1"></a>
 #### 3.1 Giám sát thông qua NRPE
 
+<a name="3.1.1"></a>
 ##### 3.1.1 Cài đặt trên host cần giám sát
 
 Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sau:
@@ -231,7 +239,7 @@ Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sa
 
 *Bước này có thể làm trên cả 2 distro CentOS và Ubuntu.*
 
-Sửa file cấu hình NRPE
+**Sửa file cấu hình NRPE**
 
 ```
 vi /etc/nagios/nrpe.cfg
@@ -242,7 +250,7 @@ vi /etc/nagios/nrpe.cfg
 Tìm trường `allowed_hosts` và thêm địa chỉ IP Nagios server của bạn vào. Mỗi IP cách nhau bởi dấu phẩy (,):
 
 ```
-allowed_hosts=127.0.0.1,192.168.100.196
+allowed_hosts=127.0.0.1, 192.168.100.196
 ```
 
 Đừng thoát khỏi file, làm tiếp theo bước dưới để khai báo câu lệnh cho NRPE.
@@ -251,26 +259,34 @@ allowed_hosts=127.0.0.1,192.168.100.196
     
 Trên 2 distro CentOS và Ubuntu, thư mục chứa các plugin trên client là khác nhau:
 
-    - Với CentOS, thư mục chứa Plugin ở `/usr/lib64/nagios/plugins/`
+- Với CentOS, thư mục chứa Plugin ở `/usr/lib64/nagios/plugins/`
 
 <img src="../../images/plugin-c-client.png" />
 
-    - Với Ubuntu, thư mục chứa Plugin ở `/usr/lib/nagios/plugins/` 
+- Với Ubuntu, thư mục chứa Plugin ở `/usr/lib/nagios/plugins/` 
 
 <img src="../../images/plugin-u-client.png" />
     
-Vì vậy, để thêm các lệnh check dịch vụ ở 2 distro cũng phải khai báo đúng đường dẫn trỏ tới thư mục chứa các plugin.
+Vì vậy, để thêm các lệnh check dịch vụ ở 2 distro cũng phải khai báo đúng đường dẫn trỏ tới thư mục chứa các plugin. Ở ví dụ này, tôi sẽ check 2 dịch vụ SSH và HTTP qua NRPE:
 
+- Với CentOS
 
+<img src="../../images/plugin-c-client.png" />
+
+- Với Ubuntu
+
+<img src="../../images/plugin-u-client.png" />
     
 Lưu lại file và thoát.
 
-- **Bước 5**: Khởi động lại dịch vụ
+**Để check các dịch vụ khác, chúng ta thêm câu lệnh tương tự với hướng dẫn bên trên. Lưu ý, cần chạy thử plugin trước để có hướng dẫn sử dụng.**
+
+- **Bước 4**: Khởi động lại dịch vụ
     
     - Với host sử dụng CentOS
     
     ```
-    systemctl start nrpe.service
+    systemctl restart nrpe.service
     systemctl enable nrpe.service
     ```
     
@@ -282,7 +298,8 @@ Lưu lại file và thoát.
 
 Sau khi cài đặt và cấu hình NRPE trên host mà chúng ta muốn giám sát, chúng ta cần phải thêm host đó vào cấu hình Nagios Server trước khi bắt đầu giám sát nó.
 
-##### 3.1.3 Thêm thông tin host trên Nagios Server
+<a name="3.1.2"></a>
+##### 3.1.2 Thêm thông tin host trên Nagios Server
 
 Trên Nagios Server, tạo file cấu hình cho mỗi host mà bạn muốn giám sát chúng ở folder `/usr/local/nagios/etc/servers/`. Trong trường hợp của tôi, tôi sẽ đặt tên cho nó là `web01.cfg`
 
@@ -307,14 +324,14 @@ define host {
 
 Với phần cấu hình trên, chúng ta chỉ có thể theo dõi được trạng thái UP/DOWN của host cần giám sát. Để giám sát thêm các dịch vụ, chúng ta tạo thêm các khối `service` trong phần cấu hình. `check_command` có thể được thêm và cài đặt các ngưỡng cảnh báo.
 
-PING:
+HTTP:
 
 ```
 define service {
         use                             generic-service
         host_name                       web01
-        service_description             PING
-        check_command                   check_ping!100.0,20%!500.0,60%
+        service_description             SSH Monitor
+        check_command                   check_nrpe!check_ssh
 }
 ```
 
@@ -324,8 +341,8 @@ SSH:
 define service {
         use                             generic-service
         host_name                       web01
-        service_description             SSH
-        check_command                   check_ssh
+        service_description             HTTP Monitor
+        check_command                   check_nrpe!check_http
         notifications_enabled           0
 }
 ```
@@ -333,19 +350,48 @@ define service {
     - `use generic-service`: Sử dụng templete có sẵn cho các dịch vụ
     - `notifications_enabled 0`: Tắt cảnh báo khi dịch vụ thay đổi trạng thái
 
+Đây là file `web01.cfg` hoàn chỉnh, theo dõi 2 dịch vụ HTTP và SSH qua NRPE:
+
+```
+define host {
+        use                             linux-server
+        host_name                       web01
+        alias                           My Apache server
+        address                         192.168.100.199
+        max_check_attempts              5
+        check_period                    24x7
+        notification_interval           30
+        notification_period             24x7
+}
+define service {
+        use                             generic-service
+        host_name                       web01
+        service_description             SSH Monitor
+        check_command                   check_nrpe!check_ssh
+}
+define service {
+        use                             generic-service
+        host_name                       web01
+        service_description             HTTP Monitor
+        check_command                   check_nrpe!check_http
+        notifications_enabled           0
+}
+```
+
 Sau khi sửa xong, chúng ta lưu lại file và khởi động lại nagios server.
 
 ```
 systemctl reload nagios.service
 ```
 
+
 <a name="3.2"></a>
-#### 3.2 Giám sát MySQL
+#### 3.2 Giám sát dịch vụ MySQL
 
 Vui lòng bấm vào [đây](4.Monitor-MySQL.md).
 
 <a name="3.3"></a>
-#### 3.3 Giám sát RabbitMQ
+#### 3.3 Giám sát dịch vụ RabbitMQ
 
 Vui lòng bấm vào [đây](5.Monitor-RabbitMQ.md).
 
