--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -5,17 +5,18 @@
 - [ 1. Chuẩn bị ](#1)
     - [1.1 Chuẩn bị môi trường cài đặt](#1.1)
 - [ 2. Cài đặt Nagios Server](#2)
-    - [2.1 Tạo user cho Nagios](#2.1)
-    - [2.2 Cài đặt Nagios Core và Plugin](#2.2)
-    - [2.3 Cài đặt NRPE trên Nagios Server](#2.3)
-    - [2.4 Khởi động Nagios Server](#2.4)
+    - [2.1 Cài đặt các gói chuẩn bị cần thiết](#2.1)
+    - [2.2 Tạo user cho Nagios](#2.2)
+    - [2.3 Cài đặt Nagios Core và Plugin](#2.3)
+    - [2.4 Cài đặt NRPE trên Nagios Server](#2.4)
+    - [2.5 Khởi động Nagios Server](#2.5)
 - [3. Giám sát host/dịch vụ](#3)
     - [3.1 Giám sát host Linux thông qua NRPE](#3.1)
         - [3.1.1 Cài đặt trên host cần giám sát](#3.1.1)
         - [3.1.2 Thêm thông tin host trên Nagios Server](#3.1.2)
     - [3.2 Giám sát dịch vụ MySQL/MariaDB](#3.2)
     - [3.3 Giám sát dịch vụ RabbitMQ](#3.3)
-- [3. Tham khảo](#3)
+- [4. Tham khảo](#4)
 
 <a name="1"></a>
 ### 1. Chuẩn bị
