--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -12,7 +12,7 @@
     - [2.5 Khởi động Nagios Server](#2.5)
 - [3. Giám sát host/dịch vụ](#3)
     - [3.1 Giám sát host Linux thông qua NRPE](#3.1)
-        - [3.1.1 Cài đặt trên host cần giám sát](#3.1.1)
+        - [3.1.1 Cài đặt NRPE trên host cần giám sát](#3.1.1)
         - [3.1.2 Thêm thông tin host trên Nagios Server](#3.1.2)
     - [3.2 Giám sát dịch vụ MySQL/MariaDB](#3.2)
     - [3.3 Giám sát dịch vụ RabbitMQ](#3.3)
