--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -204,7 +204,7 @@ http://địa-chỉ-ip/nagios
 #### 3.1 Giám sát thông qua NRPE
 
 <a name="3.1.1"></a>
-##### 3.1.1 Cài đặt trên host cần giám sát
+##### 3.1.1 Cài đặt NRPE trên host cần giám sát
 
 Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sau:
 
