--- a/docs/thuchanh-nagios/4.Monitor-MySQL.md
+++ b/docs/thuchanh-nagios/4.Monitor-MySQL.md
@@ -4,7 +4,7 @@
 
 - [ 1. Thông tin host ](#1)
 - [ 2. Chuẩn bị và cài đặt Plugin ](#2)
-    - [ 2.1. Chuẩn bị ](#2.1)
+    - [ 2.1. Chuẩn bị trên host Database ](#2.1)
     - [ 2.2. Cài đặt Plugin](#2.2)
     - [ 2.3. Thêm thông tin host và giám sát ](#2.3)
     
@@ -20,7 +20,8 @@ Service: MySQL or MariaDB
 ### 2. Chuẩn bị và cài đặt Plugin
 
 <a name="2.1"></a>
-#### 2.1. Chuẩn bị
+#### 2.1. Chuẩn bị trên host Database
+
 **Cho phép Bind đến DB**
 
 Sửa file: `vi /etc/my.cnf` (Ubuntu) hoặc `vi /etc/my.cnf.d/server.cnf` (CentOS/RHEL) và thêm ở phần `[mysqld]`
