--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -5,13 +5,13 @@
 ### Nội dung
 
 - [ 1. Thông tin host ](#1)
-- [ 2. Chuẩn bị và cài đặt Plugin ](#2)
-    - [ 2.1. Chuẩn bị ](#2.1)
-    - [ 2.2. Cài đặt Plugin](#2.2)
-    - [ 2.3. Thêm thông tin host và giám sát ](#2.3)
-    
+- [ 2. Các bước tiến hành ](#2)
+    - [ 2.1. Chuẩn bị trên host RabbitMQ ](#2.1)
+    - [ 2.2. Chuẩn bị trên host Nagios Server](#2.2)
+    - [ 2.3. Cài đặt Plugin ](#2.3)
+    - [ 2.4. Thêm thông tin host và giám sát dịch vụ trên Nagios Server](#2.4)
 <a name="1"></a>
-### 1. Thông tin host RabbitMQ
+## 1. Thông tin host RabbitMQ
 
 ```
 OS: CentOS 7
@@ -21,11 +21,23 @@ Service: RabbitMQ
 ```
 
 <a name="2"></a>
-### 2. Chuẩn bị và cài đặt Plugin
+## 2. Các bước tiến hành
 
-#### 2.1 Chuẩn bị
+<a name="2.1"></a>
+### 2.1 Chuẩn bị trên host RabbitMQ
 
-#### Cài đặt perl và gói `Monitoring::Plugins` trên Nagios server
+Đầu tiên, chúng ta phải tạo một user có chức năng `monitoring` trên RabbitMQ.
+
+```
+rabbitmqctl add_user mon 1
+rabbitmqctl set_user_tags mon monitoring
+rabbitmqctl set_permissions -p / mon ".*" ".*" ".*" 
+```
+
+<a name="2.2"></a>
+### 2.2 Chuẩn bị trên host Nagios Server
+
+**Cài đặt perl và gói `Monitoring::Plugins` trên Nagios server**
 
 ```sh
 curl -L http://cpanmin.us | perl - --sudo App::cpanminus
@@ -37,7 +49,8 @@ perl -MCPAN -e 'install Math::Calc::Units'
 
 **Lưu ý**: Khi lần đầu chạy lệnh trên, CPAN sẽ yêu cầu một số thiết lập, bấm Enter để nhập mặc định.
 
-#### 2.2 Cài đặt Plugin
+<a name="2.3"></a>
+### 2.3 Cài đặt Plugin
 
 #### Tải gói plugin từ `git` và copy chúng vào thư mục plugins
 
@@ -50,15 +63,8 @@ cp nagios-plugins-rabbitmq/scripts/* /usr/local/nagios/libexec/rabbitmq/
 chown -R nagios. /usr/local/nagios/libexec/rabbitmq/
 ```
 
-#### 2.3. Thêm thông tin host và giám sát
-
-Đầu tiên, chúng ta phải tạo một user có chức năng `monitoring` trên RabbitMQ.
-
-```
-rabbitmqctl add_user mon 1
-rabbitmqctl set_user_tags mon monitoring
-rabbitmqctl set_permissions -p / mon ".*" ".*" ".*" 
-```
+<a name="2.4"></a>
+#### 2.4 Thêm thông tin host và giám sát dịch vụ trên Nagios Server
 
 Quay trở lại Nagios server, chúng ta sẽ thêm phần thông tin của RabbitMQ vào `/etc/hosts`
 
