Sửa lệnh cd folder

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -88,7 +88,7 @@ tar xf nagios-4.3.1.tar.gz
 - **Bước 2**: Biên dịch Nagios
 
 ```
-cd ~/nagios/nagios-4.3.1
+cd nagios-4.3.1
 
 ./configure --with-command-group=nagcmd 
 make all
@@ -121,7 +121,7 @@ tar xzf nagios-plugins-2.2.0.tar.gz
 - **Bước 6**: Biên dịch các Plugin từ source code
 
 ```
-cd ~/nagios/nagios-plugins-2.2.0
+cd nagios-plugins-2.2.0
 ./configure --with-nagios-user=nagios --with-nagios-group=nagios --with-openssl
 make
 make install
@@ -145,7 +145,7 @@ tar xf nrpe-*.tar.gz
 - **Bước 2**: Biên dịch NRPE từ source
 
 ```
-cd ~/nagios/nrpe-*
+cd nrpe-*
 
 ./configure --enable-command-args --with-nagios-user=nagios \
 --with-nagios-group=nagios --with-ssl=/usr/bin/openssl \
