Cập nhật re-schedule

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -192,7 +192,7 @@ chkconfig nagios on
 Để kiểm tra, hãy truy cập vào giao diện Web và đăng nhập bằng `nagiosadmin` và Password vừa tạo ở địa chỉ:
 
 ```
-http://địa-chỉ-ip/nagios
+http://192.168.100.196/nagios
 ```
 
 <img src="../../images/nagios-1.png" />
@@ -347,6 +347,7 @@ define service {
         notifications_enabled           0
 }
 ```
+
     *Chú thích:*
     - `use generic-service`: Sử dụng templete có sẵn cho các dịch vụ
     - `notifications_enabled 0`: Tắt cảnh báo khi dịch vụ thay đổi trạng thái
@@ -385,6 +386,48 @@ Sau khi sửa xong, chúng ta lưu lại file và khởi động lại nagios se
 systemctl reload nagios.service
 ```
 
+Vào giao diện Web để kiểm tra lại:
+
+```
+http://192.168.100.196/nagios
+```
+
+- **Bước 1**: Bấm vào **Service**
+
+Chúng ta sẽ thấy một host mới có tên `web01` được thêm mới và các dịch vụ đang ở trạng thái `PENDING`.
+
+<img src="../../images/wlc1.png" />
+
+Mặc định khi mới thêm host, Nagios Server chưa check các dịch vụ. Để check xem dịch vụ trên host có chạy hay không chúng ta bấm vào dịch vụ cần check, ở đây tôi sẽ chọn dịch vụ `HTTP`.
+
+<img src="../../images/wlc-2.png" />
+
+- **Bước 2**: Bấm vào **Re-schedule the next check of this service**
+
+Khi click vào, chúng ta thấy một thông báo "**This service has not yet been checked, so status information is not avaliable.**", Đừng lo lắng, hãy click vào phần tô đỏ **Re-schedule the next check of this service** để force lượt check tiếp theo.
+
+<img src="../../images/wlc-3.png" />
+
+- **Bước 3**: Click tiếp vào **Commit**.
+
+<img src="../../images/wlc-4 .png" />
+
+
+- **Bước 4**: Click tiếp vào **Done**.
+
+<img src="../../images/wlc-5.png" />
+
+- **Bước 5**: Thông tin dịch vụ đã được check sẽ hiện ra như sau:
+
+<img src="../../images/wlc-6.png" />
+
+Tương tự, nếu bạn muốn check dịch vụ khác. Với ví dụ, này là `SSH`, các bạn thao tác lại như với dịch vụ `HTTP` mà tôi vừa hướng dẫn bên trên.
+
+Sau khi Nagios Server check xong các dịch vụ, Dashboard sẽ hiển thị như sau:
+
+<img src="../../images/wlc-7.png" />
+
+Như vậy, 2 dịch vụ mà chúng ta giám sát trên host hoạt động bình thường.
 
 <a name="3.2"></a>
 #### 3.2 Giám sát dịch vụ MySQL
