--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -14,6 +14,7 @@
     - [3.1 Giám sát host Linux thông qua NRPE](#3.1)
         - [3.1.1 Cài đặt NRPE trên host cần giám sát](#3.1.1)
         - [3.1.2 Thêm thông tin host trên Nagios Server](#3.1.2)
+        - [3.1.3 Kiểm tra trên Web UI của Nagios Server](#3.1.3)
     - [3.2 Giám sát dịch vụ MySQL/MariaDB](#3.2)
     - [3.3 Giám sát dịch vụ RabbitMQ](#3.3)
 - [4. Tham khảo](#4)
@@ -385,6 +386,9 @@ Sau khi sửa xong, chúng ta lưu lại file và khởi động lại nagios se
 ```
 systemctl reload nagios.service
 ```
+
+<a name="3.1.3"></a>
+#### 3.1.3 Kiểm tra trên Web UI của Nagios Server
 
 Vào giao diện Web để kiểm tra lại:
 
