--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -388,7 +388,7 @@ systemctl reload nagios.service
 ```
 
 <a name="3.1.3"></a>
-#### 3.1.3 Kiểm tra trên Web UI của Nagios Server
+##### 3.1.3 Kiểm tra trên Web UI của Nagios Server
 
 Vào giao diện Web để kiểm tra lại:
 
