Chỉnh sửa phần NRPE

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -8,13 +8,13 @@
     - [2.1 Cài đặt các gói chuẩn bị cần thiết](#2.1)
     - [2.2 Tạo user cho Nagios](#2.2)
     - [2.3 Cài đặt Nagios Core và Plugin](#2.3)
-    - [2.4 Cài đặt NRPE trên Nagios Server](#2.4)
-    - [2.5 Khởi động Nagios Server](#2.5)
+    - [2.4 Khởi động Nagios Server](#2.4)
 - [3. Giám sát host/dịch vụ](#3)
     - [3.1 Giám sát host Linux thông qua NRPE](#3.1)
-        - [3.1.1 Cài đặt NRPE trên host cần giám sát](#3.1.1)
-        - [3.1.2 Thêm thông tin host trên Nagios Server](#3.1.2)
-        - [3.1.3 Kiểm tra trên Web UI của Nagios Server](#3.1.3)
+        - [3.1.1 Cài đặt NRPE trên Nagios Server](3.1.1)
+        - [3.1.2 Cài đặt NRPE trên host cần giám sát](#3.1.2)
+        - [3.1.3 Thêm thông tin host trên Nagios Server](#3.1.3)
+        - [3.1.4 Kiểm tra trên Web UI của Nagios Server](#3.1.4)
     - [3.2 Giám sát dịch vụ MySQL/MariaDB](#3.2)
     - [3.3 Giám sát dịch vụ RabbitMQ](#3.3)
 - [4. Tham khảo](#4)
@@ -48,6 +48,14 @@ Link docs: https://goo.gl/yOim1o
 ```
 yum install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinetd unzip httpd php php-fpm curl wget -y
 ```
+
+- Tắt SELinux 
+
+```
+vi /etc/sysconfig/selinux
+```
+
+Sửa dòng `SELINUX=permissive` thành `SELINUX=disable`.
 
 <a name="2.2"></a>
 #### 2.2 Tạo user cho Nagios
@@ -129,7 +137,34 @@ make install
 ```
 
 <a name="2.4"></a>
-#### 2.4 Cài đặt NRPE trên Nagios Server
+
+#### 2.4 Khởi động Nagios Server
+
+Khởi động lại Apache và chạy `nagios`, cho phép khởi động cùng hệ thống:
+
+```sh
+systemctl enable httpd
+systemctl restart httpd
+service nagios restart
+chkconfig nagios on
+```
+
+Để kiểm tra, hãy truy cập vào giao diện Web và đăng nhập bằng `nagiosadmin` và Password vừa tạo ở địa chỉ:
+
+```
+http://192.168.100.196/nagios
+```
+
+<img src="../../images/nagios-1.png" />
+
+<a name="3"></a>
+### 3. Giám sát host/dịch vụ trên Linux
+
+<a name="3.1"></a>
+#### 3.1 Giám sát thông qua NRPE
+
+<a name="3.1.1"></a>
+#### 3.1.1 Cài đặt NRPE trên Nagios Server
 
 `NRPE` - (*Nagios Remote Plugin Executor*) là một công cụ đi kèm để theo dõi tài nguyên hệ thống, nó còn được biết như một Agent để theo dõi các host từ xa (Remote hosts).
 
@@ -178,34 +213,8 @@ make install
     
     - Thoát và lưu lại file.
     
-<a name="2.5"></a>
-#### 2.5 Khởi động Nagios Server
-
-Khởi động lại Apache và chạy `nagios`, cho phép khởi động cùng hệ thống:
-
-```sh
-systemctl enable httpd
-systemctl restart httpd
-service nagios restart
-chkconfig nagios on
-```
-
-Để kiểm tra, hãy truy cập vào giao diện Web và đăng nhập bằng `nagiosadmin` và Password vừa tạo ở địa chỉ:
-
-```
-http://192.168.100.196/nagios
-```
-
-<img src="../../images/nagios-1.png" />
-
-<a name="3"></a>
-### 3. Giám sát host/dịch vụ trên Linux
-
-<a name="3.1"></a>
-#### 3.1 Giám sát thông qua NRPE
-
-<a name="3.1.1"></a>
-##### 3.1.1 Cài đặt NRPE trên host cần giám sát
+<a name="3.1.2"></a>
+##### 3.1.2 Cài đặt NRPE trên host cần giám sát
 
 Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sau:
 
@@ -300,8 +309,8 @@ Lưu lại file và thoát.
 
 Sau khi cài đặt và cấu hình NRPE trên host mà chúng ta muốn giám sát, chúng ta cần phải thêm host đó vào cấu hình Nagios Server trước khi bắt đầu giám sát nó.
 
-<a name="3.1.2"></a>
-##### 3.1.2 Thêm thông tin host trên Nagios Server
+<a name="3.1.3"></a>
+##### 3.1.3 Thêm thông tin host trên Nagios Server
 
 Trên Nagios Server, tạo file cấu hình cho mỗi host mà bạn muốn giám sát chúng ở folder `/usr/local/nagios/etc/servers/`. Trong trường hợp của tôi, tôi sẽ đặt tên cho nó là `web01.cfg`
 
@@ -387,8 +396,8 @@ Sau khi sửa xong, chúng ta lưu lại file và khởi động lại nagios se
 systemctl reload nagios.service
 ```
 
-<a name="3.1.3"></a>
-##### 3.1.3 Kiểm tra trên Web UI của Nagios Server
+<a name="3.1.4"></a>
+##### 3.1.4 Kiểm tra trên Web UI của Nagios Server
 
 Vào giao diện Web để kiểm tra lại:
 
@@ -402,7 +411,7 @@ Chúng ta sẽ thấy một host mới có tên `web01` được thêm mới và
 
 <img src="../../images/wlc1.png" />
 
-Mặc định khi mới thêm host, Nagios Server chưa check các dịch vụ. Để check xem dịch vụ trên host có chạy hay không chúng ta bấm vào dịch vụ cần check, ở đây tôi sẽ chọn dịch vụ `HTTP`.
+Mặc định khi mới thêm host, Nagios Server chưa check các dịch vụ. Để check xem dịch vụ trên host có chạy hay không? Chúng ta bấm vào dịch vụ cần check, ở đây tôi sẽ chọn dịch vụ `HTTP`.
 
 <img src="../../images/wlc-2.png" />
 
